// Copyright 2023 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

package feedwire;

import "components/feed/core/proto/v2/wire/column_types.proto";

option optimize_for = LITE_RUNTIME;

message Table {
  message Column {
    optional TypeKind type = 1;
    optional string name = 3;
    repeated int64 int64_values = 2 [packed = true];
    repeated uint64 uint64_values = 4 [packed = true];
  }
  optional string name = 5;
  optional int32 num_rows = 4;
  repeated Column columns = 3;
}
